<resources>
    <string name="app_name">GykBursa</string>
    <string name="button">Göster</string>
    <string name="bursa">Bursa</string>
    <string name="erzurum">Erzurum</string>
    <string name="bursa2">Bursa</string>
    <string name="ankara">Ankara</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ugur">Uğur Yaşar Kazdal</string>
    <string name="web_adress">www.turkcell.com.tr</string>
    <string name="cv">Bottom navigation bars make it easy for users to explore and switch between top-level views in a single tap. It should be used when application has three to five top-level destinations.
The bar contents can be populated by specifying a menu resource file. Each menu item title, icon and enabled state will be used for displaying bottom navigation bar items. Menu items can also be used for programmatically selecting which destination is currently active. It can be done using MenuItem#setChecked(true)</string>
    <string name="sifirla">Sıfırla</string>
    <string name="tamam">Tamam</string>
    <string name="vazgec">Vazgeç</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="hello_blank_fragment">ld English helpan (class III strong verb; past tense healp, past participle holpen) "help, support, succor; benefit, do good to; cure, amend," from Proto-Germanic *helpan (cf. Old Norse hjalpa, Old Frisian helpa, Middle Dutch and Dutch helpen, Old High German helfan, German helfen), from PIE root *kelb- "to help" (cf. Lithuanian selpiu "to support, help").

Recorded as a cry of distress from late 14c. Sense of "serve someone with food at table" (1680s) is translated from French servir "to help, stead, avail," and led to helping "portion of food." Related: Helped (c.1300). The Middle English past participle holpen survives in biblical and U.S. dialectal use.

</string>
    <string name="vucut_kitle_endeksi_hesapla">Vücut Kitle Endeksi Hesapla</string>
    <string name="health_food">Spices add flavour to a dish without extra calories. If you like heat, add chopped chilli to the salsa for extra oomph. Sweet potatoes cook quickly to a softness that can be mashed without butter.  Each serving provides 467 kcal, 36g protein, 54.5g carbohydrates (of which 26.5g sugars), 10g fat (of which 3g saturates), 8g fibre and 1.5g salt.</string>
</resources>
